<?xml version="1.0" encoding="utf-8"?>
<!-- 2019-08-01 K.OHWADA -->
<resources>
    <string name="app_name">Camera219</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

<!-- CameraPerm -->
    <string name="request_camera_permission">This app needs CAMERA permission.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>


    <!-- pref_settings.xml -->
    <string name="pref_port_title">Port number</string>
    <string name="pref_resolution_title">Resolution</string>
    <string name="pref_rotation_title">Rotation</string>
    <string name="pref_run_on_boot_title">Run on startup/reboot</string>
    <string name="pref_all_ips_title">Allow access from all IPs (DANGEROUS!)</string>
    <string name="pref_above_lock_screen_title">Appear above the lock screen</string>
    <string name="pref_above_lock_screen_summary">This can also help ensure that the app keeps running on your device after the screen turns off</string>
    <string name="pref_discoverable_title">Discoverable with SSDP</string>
    <string name="pref_ssdp_id_title">SSDP service identifier</string>
    <string name="pref_app_version_title">App version</string>


<!-- SettingsFragment -->
    <string name="dialog_confirm_title">Are you sure?</string>
    <string name="dialog_confirm_message">Normally, CameraServe only talks to local (LAN) IPs. Allowing all IPs to access CameraServe poses a security risk because there is no built in authentication or encryption. Are you sure you want to proceed?</string>
    <string name="dialog_confirm_yes">Yes, allow all</string>
    <string name="dialog_confirm_no">No, allow local only</string>

</resources>
