<?xml version="1.0" encoding="utf-8"?>
<!-- 2019-08-01 K.OHWADA -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="port"
        android:defaultValue="8080"
        android:title="@string/pref_port_title" 
        android:inputType="number" />
    <ListPreference
        android:key="resolution"
        android:title="@string/pref_resolution_title"
        android:defaultValue="2"
        android:entries="@array/ResolutionText"
        android:entryValues="@array/Resolution" />
    <ListPreference
        android:key="rotation"
        android:defaultValue="0"
        android:entries="@array/RotationText"
        android:entryValues="@array/Rotation"
        android:title="@string/pref_rotation_title" />
    <SwitchPreference
        android:key="run_on_boot"
        android:defaultValue="false"
        android:title="@string/pref_run_on_boot_title" />
    <SwitchPreference
        android:key="allow_all_ips"
        android:defaultValue="false"
        android:title="@string/pref_all_ips_title" />
    <SwitchPreference
        android:key="above_lock_screen"
        android:defaultValue="true"
        android:title="@string/pref_above_lock_screen_title"
        android:summary="@string/pref_above_lock_screen_summary" />
    <SwitchPreference
        android:key="discoverable"
        android:defaultValue="false"
        android:title="@string/pref_discoverable_title" />
<!-- ssdp_id : enabled="false"  -->
    <EditTextPreference
        android:key="ssdp_id"
        android:title="@string/pref_ssdp_id_title"
        android:enabled="false"
        android:selectable="false"
        android:shouldDisableView="false" />
<!-- app_version : enabled="false"  -->
    <EditTextPreference
        android:key="app_version"
        android:title="@string/pref_app_version_title"
        android:enabled="false"
        android:saveEnabled="false"
        android:persistent="false"
        android:selectable="false"
        android:shouldDisableView="false" />

</PreferenceScreen>